# chatbot

./: .gitignore  README.md  框架说明.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/ai/: llm.py  models.py
backend/app/ai/agent/: agents.py  multi_agent.py  paper_assistant.py
backend/app/ai/rag/: chromaClient.py  hybridRetriever.py  ingestPdfs.py
backend/app/ai/tools/: paper_tools.py
backend/app/api/: chat_routes.py  schemas.py  services.py
backend/app/api/schema/: chatSchema.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/db/models/: base.py  department.py  employee.py
backend/app/db/repository/: department_repo.py  employee_repo.py
backend/app/utils/: chat_utils.py
backend/resource/chroma_db/525b7054-cd20-4756-b0cb-c6d788745c5e/: index_metadata.pickle
backend/resource/chroma_db/6075d1c1-b676-40e8-b910-7b201119724c/: index_metadata.pickle
backend/tests/: __init__.py
backend/tests/db/: SqlModelTest.py
backend/tests/rag/: importRag.py  queryChroma.py
chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: AntdRegistry.tsx  globals.css  layout-context.ts  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/[threadId]/: page.tsx
frontend/app/chat/components/: ChatComponent.tsx  MessageBubble.tsx  MessageInput.tsx
frontend/app/components/: AgentSelector.tsx  ClientLayout.tsx  NewChatButton.tsx  SessionListItem.tsx  SiderComponent.tsx
(+4 files in other folders)
